# pico-devcontainer-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hello.c  vcpkg-configuration.json
.devcontainer/: devcontainer.json
